--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrabajoAPLICUSA"
         tools:targetApi="31">
+
+        <activity android:name=".EventosActivity" />
+
+        <activity android:name=".ArtistasActivity" />
+
+        <activity android:name=".InfoActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
