--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,10 @@
         android:theme="@style/Theme.TrabajoAPLICUSA"
         tools:targetApi="31">
 
-        <activity android:name=".EventosActivity" />
+        <activity
+            android:name=".EventosActivity"
+            android:parentActivityName=".ArtistasActivity" />
 
-        <activity android:name=".ArtistasActivity" />
-
-        <activity android:name=".InfoActivity" />
 
         <activity
             android:name=".MainActivity"
