--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,20 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".ArtistasActivity"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
             android:name=".EventosActivity"
             android:parentActivityName=".ArtistasActivity" />
+
+        <activity
+            android:name=".EntradasActivity"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".LugaresActivity"
+            android:parentActivityName=".MainActivity" />
 
 
         <activity
