--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".ArtistasActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
             android:name=".EventosActivity"
             android:parentActivityName=".ArtistasActivity" />
 
